tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c: In function ‘dfs’:
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:66:26: error: expected expression before ‘Empty’
   66 |     return (strcmp(node, Empty) == 0 ? 0LL : (((current + v) == target ? 1LL : 0LL) + dfs(l, target, current + v)) + dfs(r, target, current + v));
      |                          ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:66:59: error: ‘v’ undeclared (first use in this function)
   66 |     return (strcmp(node, Empty) == 0 ? 0LL : (((current + v) == target ? 1LL : 0LL) + dfs(l, target, current + v)) + dfs(r, target, current + v));
      |                                                           ^
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:66:59: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:66:91: error: ‘l’ undeclared (first use in this function)
   66 |     return (strcmp(node, Empty) == 0 ? 0LL : (((current + v) == target ? 1LL : 0LL) + dfs(l, target, current + v)) + dfs(r, target, current + v));
      |                                                                                           ^
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:66:122: error: ‘r’ undeclared (first use in this function)
   66 |     return (strcmp(node, Empty) == 0 ? 0LL : (((current + v) == target ? 1LL : 0LL) + dfs(l, target, current + v)) + dfs(r, target, current + v));
      |                                                                                                                          ^
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c: In function ‘path_sum’:
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:70:26: error: expected expression before ‘Empty’
   70 |     return (strcmp(node, Empty) == 0 ? 0LL : (dfs(node, target, 0LL) + path_sum(l, target)) + path_sum(r, target));
      |                          ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:70:81: error: ‘l’ undeclared (first use in this function)
   70 |     return (strcmp(node, Empty) == 0 ? 0LL : (dfs(node, target, 0LL) + path_sum(l, target)) + path_sum(r, target));
      |                                                                                 ^
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:70:104: error: ‘r’ undeclared (first use in this function)
   70 |     return (strcmp(node, Empty) == 0 ? 0LL : (dfs(node, target, 0LL) + path_sum(l, target)) + path_sum(r, target));
      |                                                                                                        ^
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c: In function ‘sample_tree_one’:
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:74:129: error: expected expression before ‘Empty’
   74 |     return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 11LL, .left = Empty, .right = Empty}}};
      |                                                                                                                                 ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:74:192: error: expected expression before ‘Empty’
   74 |     return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 11LL, .left = Empty, .right = Empty}}};
      |                                                                                                                                                                                                ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:74:255: error: expected expression before ‘Empty’
   74 |     return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 11LL, .left = Empty, .right = Empty}}};
      |                                                                                                                                                                                                                                                               ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:74:365: error: expected expression before ‘Empty’
   74 |     return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 11LL, .left = Empty, .right = Empty}}};
      |                                                                                                                                                                                                                                                                                                                                                                             ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c: In function ‘sample_tree_two’:
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:78:129: error: expected expression before ‘Empty’
   78 |     return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 10LL, .left = Empty, .right = Empty}}};
      |                                                                                                                                 ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:78:192: error: expected expression before ‘Empty’
   78 |     return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 10LL, .left = Empty, .right = Empty}}};
      |                                                                                                                                                                                                ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:78:255: error: expected expression before ‘Empty’
   78 |     return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 10LL, .left = Empty, .right = Empty}}};
      |                                                                                                                                                                                                                                                               ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:78:365: error: expected expression before ‘Empty’
   78 |     return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 10LL, .left = Empty, .right = Empty}}};
      |                                                                                                                                                                                                                                                                                                                                                                             ^~~~~
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c: In function ‘user_main’:
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:83:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
   83 |     printf("%d\n", path_sum(tree1, 8LL));
      |             ~^     ~~~~~~~~~~~~~~~~~~~~
      |              |     |
      |              int   long long int
      |             %lld
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:84:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
   84 |     printf("%d\n", path_sum(tree1, 7LL));
      |             ~^     ~~~~~~~~~~~~~~~~~~~~
      |              |     |
      |              int   long long int
      |             %lld
/workspace/mochi/tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c:86:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
   86 |     printf("%d\n", path_sum(tree2, 8LL));
      |             ~^     ~~~~~~~~~~~~~~~~~~~~
      |              |     |
      |              int   long long int
      |             %lld
