tests/algorithms/x/C/data_structures/binary_tree/binary_tree_path_sum.c
// Generated by Mochi 0.10.32 on 2025-08-24 14:55 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct Empty Empty;
typedef struct Node Node;

struct Empty {
};

struct Node {
    const char* left;
    long long value;
    const char* right;
};

long long dfs(const char* node, long long target, long long current);
long long path_sum(const char* node, long long target);
const char* sample_tree_one();
const char* sample_tree_two();
void user_main();
int main(void);

long long dfs(const char* node, long long target, long long current) {
    return (strcmp(node, Empty) == 0 ? 0LL : (((current + v) == target ? 1LL : 0LL) + dfs(l, target, current + v)) + dfs(r, target, current + v));
}

long long path_sum(const char* node, long long target) {
    return (strcmp(node, Empty) == 0 ? 0LL : (dfs(node, target, 0LL) + path_sum(l, target)) + path_sum(r, target));
}

const char* sample_tree_one() {
    return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 11LL, .left = Empty, .right = Empty}}};
}

const char* sample_tree_two() {
    return (Node){.value = 10LL, .left = (Node){.value = 5LL, .left = (Node){.value = 3LL, .left = (Node){.value = 3LL, .left = Empty, .right = Empty}, .right = (Node){.value = -2LL, .left = Empty, .right = Empty}}, .right = (Node){.value = 2LL, .left = Empty, .right = (Node){.value = 1LL, .left = Empty, .right = Empty}}}, .right = (Node){.value = -3LL, .left = Empty, .right = (Node){.value = 10LL, .left = Empty, .right = Empty}}};
}

void user_main() {
    const char* tree1 = sample_tree_one();
    printf("%d\n", path_sum(tree1, 8LL));
    printf("%d\n", path_sum(tree1, 7LL));
    const char* tree2 = sample_tree_two();
    printf("%d\n", path_sum(tree2, 8LL));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
